# wp-reaper

./: .gitmodules  CLAUDE.md  PROGRESS.md  install.sh  pyproject.toml
docker/tools/: Dockerfile
docs/research/: 01-php-sast-tools.md  02-bug-bounty-playbook.md  03-prjblk-reference.md
scripts/: hunt-blocklist.txt  hunt.py  verify-rules.sh
