# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Shivamani Vastrala
[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-reaper"
version = "0.1.0"
description = "WordPress vulnerability scanner for bug bounty hunting"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "requests>=2.32",
]

[project.scripts]
wp-reaper = "wp_reaper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
